--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="https://designbyrb.com/about-us/">ABOUT US</a></li>
+            <li><a href="https://designbyrb.com/3d-designs/">3D DESIGN</a></li>
+            <li><a href="https://designbyrb.com/complete-projects/">COMPLETED PROJECTS</a></li>
+            <li><a href="https://designbyrb.com/contact-us/">CONTACT US</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
