--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <a href="http://designbyrb.com"><img class="img-responsive" src="images/architecture-and-design-02.png"></a>
+          <h1 class="page-header">3 Col Portfolio <small>Showcase Your Work</small></h1>
         </div>
 
       </div>
