--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h1 class="page-header">3 Col Portfolio <small>Showcase Your Work</small></h1>
+          <h1 class="page-header">INTERIOR DESIGN FORT LAUDERDALE<small>LUXURY INTERIOR REMODELING</small></h1>
         </div>
 
       </div>
@@ -82,9 +82,6 @@
             <li><a href="#">&laquo;</a></li>
             <li class="active"><a href="#">1</a></li>
             <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
             <li><a href="#">&raquo;</a></li>
           </ul>        
         </div>
@@ -100,7 +97,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; Company <span id="getCurrentDate"></span></p>
+            <p>Copyright &copy; DESIGN BY RB <span id="getCurrentDate"></span></p>
           </div>
         </div>
       </footer>
