--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Three Column Portfolio Template for Bootstrap 3</title>
+    <title>TOP CONSTRUCTION COMPANY IN FORT LAUDERDALE | DESIGN BY RB</title>
+
+    <meta name="keywords" content="interior design fort lauderdale, construction company fort lauderdale, general contractor fort lauderdale, "> 
+    
+    <meta name="description" content="Discover Fort Lauderdale's premier interior design firm, where luxury meets innovation. With over a decade of expertise, our expert team creates bespoke spaces using cutting-edge technology and top-quality materials. From concept to completion, we ensure a seamless process with 100% client satisfaction guaranteed. Welcome to elevated living.">
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -46,7 +50,10 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h1 class="page-header">INTERIOR DESIGN FORT LAUDERDALE</h1>
+          <h1 class="page-header">CONSTRUCTION COMPANY FORT LAUDERDALE</h1>
+          <br>
+          <small>Discover Fort Lauderdale's premier interior design firm, where luxury meets innovation. With over a decade of expertise, our expert team creates bespoke spaces using cutting-edge technology and top-quality materials. From concept to completion, we ensure a seamless process with 100% client satisfaction guaranteed. Welcome to elevated living.</small>
+
         </div>
 
       </div>
