--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 
         <div class="col-lg-12">
           <h1 class="page-header">CONSTRUCTION COMPANY FORT LAUDERDALE</h1>
-          <br>
-          <small>Discover Fort Lauderdale's premier interior design firm, where luxury meets innovation. With over a decade of expertise, our expert team creates bespoke spaces using cutting-edge technology and top-quality materials. From concept to completion, we ensure a seamless process with 100% client satisfaction guaranteed. Welcome to elevated living.</small>
+          <h3>Discover Fort Lauderdale's premier interior design firm, where luxury meets innovation. With over a decade of expertise, our expert team creates bespoke spaces using cutting-edge technology and top-quality materials. From concept to completion, we ensure a seamless process with 100% client satisfaction guaranteed. Welcome to elevated living.</h3>
 
         </div>
 
