--- a/interior-design-fort-lauderdale.html
+++ b/interior-design-fort-lauderdale.html
@@ -51,8 +51,6 @@
 
         <div class="col-lg-12">
           <h1 class="page-header">Elevating Interior Design Experiences in Fort Lauderdale: A Decade of Excellence</h1>
-
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
           
           <p>In the vibrant realm of interior design, where creativity intertwines with functionality, Fort Lauderdale stands as a beacon of innovation. Within this dynamic landscape, our company has emerged as a trailblazer, redefining the very essence of luxury living through our unparalleled dedication to excellence. With over a decade of unwavering commitment to our craft, we have cultivated a legacy of transformative design solutions that transcend mere aesthetics, creating immersive spaces that resonate with our clients' aspirations. </p>
 
@@ -60,6 +58,8 @@
 
           <p>Central to our approach is the relentless pursuit of innovation. Leveraging cutting-edge technology and advanced design methodologies, we push the boundaries of conventional design paradigms, crafting spaces that exude sophistication and elegance. From immersive 3D renderings to virtual reality simulations, our clients are empowered to explore and envision their dream interiors with unparalleled clarity and precision. </p>
 
+          <a href="#project-link"><img class="img-responsive" width=100% src="http://placehold.it/700x400"></a>
+          
           <p>Quality is the cornerstone of our ethos. We meticulously source only the finest materials, handpicking each element to ensure uncompromising durability, functionality, and aesthetic appeal. Every facet of our designs reflects a commitment to excellence, from the exquisite finishes to the meticulously crafted furnishings, elevating the ordinary to the extraordinary. </p>
 
           <p>Beyond the realms of aesthetics, we recognize the paramount importance of regulatory compliance and project efficiency. With a comprehensive understanding of local regulations and building codes, we streamline the permitting and inspection process, sparing our clients the burden of bureaucratic intricacies. Our proactive approach and meticulous planning ensure seamless project execution, delivering exceptional results within stipulated timelines and budgets. </p>
