--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
           
           <p>Welcome to the  top interior design firm in Fort Lauderdale, where creativity meets functionality to redefine luxury living. With over a decade of industry experience, our seasoned team of designers, architects, engineers, and project managers collaborates seamlessly to bring your vision to life. Utilizing cutting-edge technology, we craft immersive spaces that transcend the ordinary, with meticulous attention to detail and a commitment to excellence evident in every aspect of our work. From sourcing only the highest quality materials to navigating permits and inspections, we ensure a seamless process from conception to completion. With a 100% client satisfaction guarantee and over 200 glowing 5-star reviews on Google, our reputation for excellence precedes us. Experience the epitome of refined living with our transformative interior design solutions.</p>
           <br>
+          <p> <strong>Design by RB - A Division of Ross Brothers</strong> <br>
+            Build + Design Luxury Contractors <br>
+            Located in: Design Center of the Americas (DCOTA) <br>
+            Address: 1855 Griffin Rd A-455 4th Floor, Dania Beach, FL 33004 <br>
+            <a href="tel:9542460883">Phone: (954) 246-0883 </a><br>
+            <a href="https://designbyrb.com/">https://designbyrb.com/</a> <br>
+         </p>
          </div>
 
       </div>  
