--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
              Build + Design Luxury Contractors <br>
              Located in: Design Center of the Americas (DCOTA) <br>
              Address: 1855 Griffin Rd A-455 4th Floor, Dania Beach, FL 33004 <br>
-             <a href="tel:9542460883">Phone: (954) 246-0883 </a><br>
+             Phone:<a href="tel:9542460883"> (954) 246-0883 </a><br>
              <a href="https://designbyrb.com/">https://designbyrb.com/</a> <br>
              </p>
             </div>
