--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
              Phone:<a href="tel:9542460883"> (954) 246-0883 </a> | <a href="https://designbyrb.com/">https://designbyrb.com/</a> <br>
              </p>
             </div>
+            <div style="line-break:1px;"></div>
           </div>  
          
          </div>
