--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
              Phone:<a href="tel:9542460883"> (954) 246-0883 </a> | <a href="https://designbyrb.com/">https://designbyrb.com/</a> <br>
              </p>
             </div>
-            <div style="line-break:1px; width:100%;"></div>
+            <div style="line-break:1px; width:100%; height: 10px; background-color: blue;"></div>
           </div>  
          
          </div>
