--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
           <h1 class="page-header">CONSTRUCTION COMPANY FORT LAUDERDALE</h1>
           
           <div style="width:100%; height: 100px; margin-bottom: 20px; background-color: red;">
+
             <div style="width:50%; float:left; padding: 0%;">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/br119uonGmI?si=8H9b3jKOmNVP2gcv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe width="100%" src="https://www.youtube.com/embed/br119uonGmI?si=8H9b3jKOmNVP2gcv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
      
             <div style="width:50%; float:left; padding-left: 5px; text-align: justify;">
