--- a/interior-design-fort-lauderdale.html
+++ b/interior-design-fort-lauderdale.html
@@ -58,7 +58,7 @@
 
           <p>Central to our approach is the relentless pursuit of innovation. Leveraging cutting-edge technology and advanced design methodologies, we push the boundaries of conventional design paradigms, crafting spaces that exude sophistication and elegance. From immersive 3D renderings to virtual reality simulations, our clients are empowered to explore and envision their dream interiors with unparalleled clarity and precision. </p>
 
-          <p><a href="#project-link"><img class="img-responsive" width=100% src="http://placehold.it/700x400"></a></p>
+          <p><a href="images/interior-design-fort-lauderdale.jpg"><img class="img-responsive" width=100% src="images/interior-design-fort-lauderdale.jpg"></a></p>
           
           <p>Quality is the cornerstone of our ethos. We meticulously source only the finest materials, handpicking each element to ensure uncompromising durability, functionality, and aesthetic appeal. Every facet of our designs reflects a commitment to excellence, from the exquisite finishes to the meticulously crafted furnishings, elevating the ordinary to the extraordinary. </p>
 
