--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="row">
 
         <div class="col-md-4 portfolio-item">
-          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
+          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" img name="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
           <h3><a href="interior-design-fort-lauderdale.html">Interior Design in Fort Lauderdale</a></h3>
           <p>A Decade of Excellence In the vibrant realm of interior design, where creativity intertwines with functionality, Fort Lauderdale stands as a beacon of innovation.</p>
         </div>
