--- a/interior-design-fort-lauderdale.html
+++ b/interior-design-fort-lauderdale.html
@@ -8,9 +8,9 @@
 
     <title>INTERIOR DESIGN IN FORT LAUDERDALE | DESIGN BY RB</title>
 
-    <meta name="keywords" content="interior design fort lauderdale, construction company fort lauderdale, general contractor fort lauderdale, "> 
+    <meta name="keywords" content="interior design in Fort Lauderdale, interior designers,3D renderings, virtual reality, fort lauderdale, luxury living, interior design firm "> 
     
-    <meta name="description" content="Discover Fort Lauderdale's premier interior design firm, where luxury meets innovation. With over a decade of expertise, our expert team creates bespoke spaces using cutting-edge technology and top-quality materials. From concept to completion, we ensure a seamless process with 100% client satisfaction guaranteed. Welcome to elevated living.">
+    <meta name="description" content="Welcome to Fort Lauderdale's top interior design firm. With a decade of experience, our expert team creates bespoke spaces using cutting-edge technology and top-quality materials.">
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -60,7 +60,7 @@
 
           <p><a href="images/interior-design-fort-lauderdale.jpg"><img class="img-responsive" img name="Interior Design Fort Lauderdale" width=100% src="images/interior-design-fort-lauderdale.jpg"></a></p>
           
-          <p>Quality is the cornerstone of our ethos. We meticulously source only the finest materials, handpicking each element to ensure uncompromising durability, functionality, and aesthetic appeal. Every facet of our designs reflects a commitment to excellence, from the exquisite finishes to the meticulously crafted furnishings, elevating the ordinary to the extraordinary. </p>
+          <p>Quality is the cornerstone of our ethos. Our interior design firm source only the finest materials, handpicking each element to ensure uncompromising durability, functionality, and aesthetic appeal. Every facet of our designs reflects a commitment to excellence, from the exquisite finishes to the meticulously crafted furnishings, elevating the ordinary to the extraordinary. </p>
 
           <p>Beyond the realms of aesthetics, we recognize the paramount importance of regulatory compliance and project efficiency. With a comprehensive understanding of local regulations and building codes, we streamline the permitting and inspection process, sparing our clients the burden of bureaucratic intricacies. Our proactive approach and meticulous planning ensure seamless project execution, delivering exceptional results within stipulated timelines and budgets. </p>
 
