--- a/interior-design-fort-lauderdale.html
+++ b/interior-design-fort-lauderdale.html
@@ -60,7 +60,7 @@
 
           <p><a href="images/interior-design-fort-lauderdale.jpg"><img class="img-responsive" img name="Interior Design Fort Lauderdale" width=100% src="images/interior-design-fort-lauderdale.jpg"></a></p>
           
-          <p>Quality is the cornerstone of our ethos. Our interior design firm source only the finest materials, handpicking each element to ensure uncompromising durability, functionality, and aesthetic appeal. Every facet of our designs reflects a commitment to excellence, from the exquisite finishes to the meticulously crafted furnishings, elevating the ordinary to the extraordinary. </p>
+          <p>Quality is the cornerstone of our ethos. Our interior design firm sources only the finest materials, handpicking each element to ensure uncompromising durability, functionality, and aesthetic appeal. Every facet of our designs reflects a commitment to excellence, from the exquisite finishes to the meticulously crafted furnishings, elevating the ordinary to the extraordinary. </p>
 
           <p>Beyond the realms of aesthetics, we recognize the paramount importance of regulatory compliance and project efficiency. With a comprehensive understanding of local regulations and building codes, we streamline the permitting and inspection process, sparing our clients the burden of bureaucratic intricacies. Our proactive approach and meticulous planning ensure seamless project execution, delivering exceptional results within stipulated timelines and budgets. </p>
 
