--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" img name="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
+          <h3><a href="interior-design-fort-lauderdale.html">Interior Design in Fort Lauderdale</a></h3>
+          <p>A Decade of Excellence In the vibrant realm of interior design, where creativity intertwines with functionality, Fort Lauderdale stands as a beacon of innovation.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" img name="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
+          <h3><a href="interior-design-fort-lauderdale.html">Interior Design in Fort Lauderdale</a></h3>
+          <p>A Decade of Excellence In the vibrant realm of interior design, where creativity intertwines with functionality, Fort Lauderdale stands as a beacon of innovation.</p>
         </div>
 
       </div>
@@ -90,21 +90,21 @@
       <div class="row">
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" img name="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
+          <h3><a href="interior-design-fort-lauderdale.html">Interior Design in Fort Lauderdale</a></h3>
+          <p>A Decade of Excellence In the vibrant realm of interior design, where creativity intertwines with functionality, Fort Lauderdale stands as a beacon of innovation.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" img name="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
+          <h3><a href="interior-design-fort-lauderdale.html">Interior Design in Fort Lauderdale</a></h3>
+          <p>A Decade of Excellence In the vibrant realm of interior design, where creativity intertwines with functionality, Fort Lauderdale stands as a beacon of innovation.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" img name="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
+          <h3><a href="interior-design-fort-lauderdale.html">Interior Design in Fort Lauderdale</a></h3>
+          <p>A Decade of Excellence In the vibrant realm of interior design, where creativity intertwines with functionality, Fort Lauderdale stands as a beacon of innovation.</p>
         </div>
 
       </div>
