--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" img name="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
-          <h3><a href="interior-design-fort-lauderdale.html">Interior Design in Fort Lauderdale</a></h3>
-          <p>A Decade of Excellence In the vibrant realm of interior design, where creativity intertwines with functionality, Fort Lauderdale stands as a beacon of innovation.</p>
+          <a href="general-contractor-fort-lauderdale.html"><img class="img-responsive" img name="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
+          <h3><a href="general-contractor-fort-lauderdale.html">Your Trusted General Contractor</a></h3>
+          <p>Discover Fort Lauderdale's premier general contractor with over a decade of expertise, dedicated to exceeding expectations. Contact us today!</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
