--- a/general-contractor-fort-lauderdale.html
+++ b/general-contractor-fort-lauderdale.html
@@ -58,7 +58,7 @@
 
           <p>At the heart of our success lies our exceptional team of professionals, each a master of their craft. From seasoned interior designers with an eye for detail to skilled architects with a flair for creativity, our diverse team collaborates seamlessly to bring our clients' visions to life. With a wealth of experience and a passion for excellence, they work tirelessly to ensure that every project is a true reflection of our clients' unique style and personality.</p>
 
-          <p><a href="images/interior-design-fort-lauderdale.jpg"><img class="img-responsive" img name="General Contractor Fort Lauderdale" style="border:1px; border-color: red; padding:5px;" width=100% src="images/interior-design-fort-lauderdale.jpg"></a></p>
+          <p><a href="images/interior-design-fort-lauderdale.jpg"><img class="img-responsive" img name="General Contractor Fort Lauderdale" style="border: 1px solid #eee; padding 5px;" width=100% src="images/interior-design-fort-lauderdale.jpg"></a></p>
             
           <p>But it's not just our expertise that sets us apart—it's our unwavering dedication to going above and beyond for our clients. From the initial consultation to the final walkthrough, we take the time to listen, understand, and anticipate our clients' needs, ensuring that every aspect of their project is executed with precision and care. Our goal is not just to meet expectations but to exceed them, delivering results that leave a lasting impression.</p>
 
