--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta name="keywords" content="interior design fort lauderdale, construction company fort lauderdale, general contractor fort lauderdale, architects Fort Lauderdale, 3D Renderings Fort Lauderdale, interior design, construction company, general contractor, architects, 3D Renderings"> 
     
-    <meta name="description" content="Discover Fort Lauderdale's premier interior design firm, where luxury meets innovation. With over a decade of expertise, our expert team creates bespoke spaces using cutting-edge technology and top-quality materials. From concept to completion, we ensure a seamless process with 100% client satisfaction guaranteed. Welcome to elevated living.">
+    <meta name="description" content="Discover Fort Lauderdale's premier construction company and interior design firm, where luxury meets innovation. With over a decade of expertise, our expert team creates bespoke spaces using cutting-edge technology and top-quality materials. From concept to completion, we ensure a seamless process with 100% client satisfaction guaranteed. Welcome to elevated living.">
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -52,7 +52,7 @@
         <div class="col-lg-12">
           <h1 class="page-header">CONSTRUCTION COMPANY FORT LAUDERDALE</h1>
 
-            <p>Welcome to the  top general contractor and interior design firm in Fort Lauderdale, where creativity meets functionality to redefine luxury living. With over a decade of industry experience, our seasoned team of designers, architects, engineers, and project managers collaborates seamlessly to bring your vision to life. Utilizing cutting-edge technology, we craft immersive spaces that transcend the ordinary, with meticulous attention to detail and a commitment to excellence evident in every aspect of our work. From sourcing only the highest quality materials to navigating permits and inspections, we ensure a seamless process from conception to completion. With a 100% client satisfaction guarantee and over 200 glowing 5-star reviews on Google, our reputation for excellence precedes us. Experience the epitome of refined living with our transformative interior design solutions.</p>
+            <p>Welcome to the top construction company and interior design firm in Fort Lauderdale, where creativity meets functionality to redefine luxury living. With over a decade of industry experience, our seasoned team of designers, architects, engineers, and project managers collaborates seamlessly to bring your vision to life. Utilizing cutting-edge technology, we craft immersive spaces that transcend the ordinary, with meticulous attention to detail and a commitment to excellence evident in every aspect of our work. From sourcing only the highest quality materials to navigating permits and inspections, we ensure a seamless process from conception to completion. With a 100% client satisfaction guarantee and over 200 glowing 5-star reviews on Google, our reputation for excellence precedes us. Experience the epitome of refined living with our transformative interior design solutions.</p>
          
              <p> <strong>Design by RB - A Division of Ross Brothers</strong> <br>
              Build + Design Luxury Contractors <br>
