--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
           <div style="margin-bottom:20px;" class="topvideosmall">
-            <div style="width:100%; float:left; padding: 0%;"><iframe width="100%" height="1000" src="https://www.youtube.com/embed/br119uonGmI?si=8H9b3jKOmNVP2gcv" frameborder="0" allowfullscreen class="video"></iframe></div>
+            <div style="width:100%; float:left; padding: 0%;"><div class="videoWrapper"><iframe src="https://www.youtube.com/embed/br119uonGmI?si=8H9b3jKOmNVP2gcv" frameborder="0" allowfullscreen class="video"></iframe></div></div>
             <div style="width:100%; float:left; padding-top: 10px; padding-bottom: 10px; text-align: justify;">Welcome to the  top interior design firm in Fort Lauderdale, where creativity meets functionality to redefine luxury living. With over a decade of industry experience, our seasoned team of designers, architects, engineers, and project managers collaborates seamlessly to bring your vision to life. Utilizing cutting-edge technology, we craft immersive spaces that transcend the ordinary, with meticulous attention to detail and a commitment to excellence evident in every aspect of our work. From sourcing only the highest quality materials to navigating permits and inspections, we ensure a seamless process from conception to completion. With a 100% client satisfaction guarantee and over 200 glowing 5-star reviews on Google, our reputation for excellence precedes us. Experience the epitome of refined living with our transformative interior design solutions.<br><br>
               <p> <strong>Design by RB - A Division of Ross Brothers</strong> <br>
                 Build + Design Luxury Contractors <br>
