--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 
         <div class="col-md-4 portfolio-item">
           <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" img name="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
-          <h3><a href="interior-design-fort-lauderdale.html">Interior Design in Fort Lauderdale</a></h3>
-          <p>A Decade of Excellence In the vibrant realm of interior design, where creativity intertwines with functionality, Fort Lauderdale stands as a beacon of innovation.</p>
+          <h3><a href="3d-renderings-fort-lauderdale.html">Setting the Standard of 3D Renderings in Fort Lauderdale</a></h3>
+          <p>Expert in architectural visualization, specializing in 3D renderings in Fort Lauderdale. Over a decade of experience delivering exceptional results.</p>
         </div>
 
       </div>
