--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>TOP CONSTRUCTION COMPANY IN FORT LAUDERDALE | DESIGN BY RB</title>
 
-    <meta name="keywords" content="interior design fort lauderdale, construction company fort lauderdale, general contractor fort lauderdale, architects Fort Lauderdale, 3D Renderings Fort Lauderdale, interior design, construction company, general contractor, architects, 3D Renderings, fort lauderdale"> 
+    <meta name="keywords" content="interior design fort lauderdale, construction company fort lauderdale, general contractor fort lauderdale, architects Fort Lauderdale, 3D Renderings Fort Lauderdale, interior design, construction company, general contractor, architects, 3D Renderings, fort lauderdale, broward, south florida"> 
     
     <meta name="description" content="Discover Fort Lauderdale's premier construction company and interior design firm, where luxury meets innovation. With over a decade of expertise, our expert team creates bespoke spaces using cutting-edge technology and top-quality materials. From concept to completion, we ensure a seamless process with 100% client satisfaction guaranteed. Welcome to elevated living.">
 
