--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div class="col-md-4 portfolio-item">
           <a href="general-contractor-fort-lauderdale.html"><img class="img-responsive" img name="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
-          <h3><a href="general-contractor-fort-lauderdale.html">Your Trusted Top General Contractor in South Florida</a></h3>
+          <h3><a href="general-contractor-fort-lauderdale.html">Your Trusted Top General Contractor of South Florida</a></h3>
           <p>Discover Fort Lauderdale's premier general contractor with over a decade of expertise, dedicated to exceeding expectations. Contact us today!</p>
         </div>
 
