--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 
         <div class="col-md-4 portfolio-item">
           <a href="architectural-firm-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Architectural Firm Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
-          <h3><a href="architectural-firm-fort-lauderdale.html">Interior Design in Fort Lauderdale</a></h3>
-          <p>A Decade of Excellence In the vibrant realm of interior design, where creativity intertwines with functionality, Fort Lauderdale stands as a beacon of innovation.</p>
+          <h3><a href="architectural-firm-fort-lauderdale.html">Redefining Luxury Living: Architectural Firm in Fort Lauderdale</a></h3>
+          <p>In the vibrant cityscape of Fort Lauderdale, discerning homeowners and businesses seek an architectural firm that transcends conventional boundaries.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
