--- a/architectural-firm-fort-lauderdale.html
+++ b/architectural-firm-fort-lauderdale.html
@@ -56,9 +56,7 @@
 
           <h2>Architectural Firm: Crafting Dreams into Reality</h2>
 
-          <p>As a leading architectural firm in Fort Lauderdale, we understand that each project is more than just a structure—it's a reflection of our clients' aspirations and lifestyles. With over a decade of experience, we have honed our expertise to perfection, earning a reputation for excellence that extends far beyond our city limits.</p>
-
-          <h2>Exceeding Expectations: Our Decade of Excellence</h2>
+          <p>As a leading architectural firm in Fort Lauderdale, we understand that each project is more than just a structure—it's a reflection of our clients' aspirations and lifestyles. With over a decade of experience, we have honed our expertise to perfection, earning a reputation for excellence that extends far beyond our city limits.</p
 
           <p>Since our inception, we have been committed to exceeding the expectations of our clients at every turn. With more than ten years in business, we have cultivated a legacy of exceptional design, meticulous attention to detail, and unwavering dedication to client satisfaction. Our track record speaks for itself, with countless successful projects and satisfied clients to our name.</p>
 
