--- a/architectural-firm-fort-lauderdale.html
+++ b/architectural-firm-fort-lauderdale.html
@@ -66,9 +66,7 @@
 
           <p>At the heart of our success lies our exceptional team of professionals, each a master of their craft. From visionary architects and interior designers to skilled engineers and project managers, our diverse team collaborates seamlessly to bring our clients' visions to life. With a wealth of experience and a passion for excellence, they work tirelessly to ensure that every project exceeds expectations.</p>
 
-          <h2>Harnessing Innovation: Cutting-Edge Virtual Reality Technology</h2>
-
-         <p>In an era of rapid technological advancement, we stay at the forefront of innovation by leveraging cutting-edge virtual reality technology. Through immersive 3D renderings and virtual walkthroughs, we provide our clients with a true-to-life preview of their future space, empowering them to make informed decisions and visualize the end result with unparalleled clarity.</p>
+         <p>We are harnessing innovation with cutting-edge virtual reality technology. In an era of rapid technological advancement, we stay at the forefront of innovation by leveraging cutting-edge virtual reality technology. Through immersive 3D renderings and virtual walkthroughs, we provide our clients with a true-to-life preview of their future space, empowering them to make informed decisions and visualize the end result with unparalleled clarity.</p>
 
          <h2>Quality without Compromise: Luxurious Designs and High-Quality Materials</h2>
 
@@ -78,11 +76,7 @@
 
          <p>Navigating the complexities of permits and inspections can be daunting for many clients. That's why we take care of the entire process, from start to finish, ensuring compliance with local regulations and building codes. Our experienced team works closely with city officials and regulatory agencies to expedite the permitting process, keeping our projects on track and on schedule.</p>
 
-         <h2>Guaranteed Satisfaction: Our Commitment to Client Happiness</h2>
-
          <p>At our architectural firm in Fort Lauderdale, client satisfaction isn't just a goal—it's our guiding principle. With a 100% satisfaction guarantee and over 200 glowing 5-star reviews on Google, we've earned the trust and admiration of our clients. Each testimonial is a testament to our unwavering commitment to excellence and our dedication to exceeding expectations.</p>
-
-         <h2>Conclusion: Your Partner in Architectural Excellence</h2>
 
          <p>In conclusion, when it comes to choosing an architectural firm in Fort Lauderdale, settle for nothing less than the best. With over a decade of proven expertise, a passion for innovation, and a commitment to excellence, we are your trusted partner in bringing your architectural dreams to life. Contact us today and let's embark on a journey of extraordinary design and construction experiences together.</p>
 
