--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
       <div class="row">
 
         <div class="col-md-4 portfolio-item">
-          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
+          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Interior Design Fort Lauderdale" alt="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
           <h3><a href="interior-design-fort-lauderdale.html">Interior Design in Fort Lauderdale by Design by RB</a></h3>
           <p>A Decade of Excellence In the vibrant realm of interior design, where creativity intertwines with functionality, Fort Lauderdale stands as a beacon of innovation.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="general-contractor-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="General Contractor Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
+          <a href="general-contractor-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="General Contractor Fort Lauderdale" alt="General Contractor Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
           <h3><a href="general-contractor-fort-lauderdale.html">Your Trusted Top General Contractor of South Florida</a></h3>
           <p>Discover Fort Lauderdale's premier general contractor with over a decade of expertise, dedicated to exceeding expectations. Contact us today!</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="3d-renderings-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="3D Rendering Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
+          <a href="3d-renderings-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="3D Rendering Fort Lauderdale" alt="3D Rendering Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
           <h3><a href="3d-renderings-fort-lauderdale.html">Setting the Standard of 3D Renderings in Fort Lauderdale</a></h3>
           <p>Expert in architectural visualization, specializing in 3D renderings in Fort Lauderdale. Over a decade of experience delivering exceptional results.</p>
         </div>
@@ -106,19 +106,19 @@
       <div class="row">
 
         <div class="col-md-4 portfolio-item">
-          <a href="architectural-firm-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Architectural Firm Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
+          <a href="architectural-firm-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Architectural Firm Fort Lauderdale" alt="Architectural Firm Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
           <h3><a href="architectural-firm-fort-lauderdale.html">Redefining Luxury Living: Architectural Firm in Fort Lauderdale</a></h3>
           <p>In the vibrant cityscape of Fort Lauderdale, discerning homeowners and businesses seek an architectural firm that transcends conventional boundaries.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
+          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Interior Design Fort Lauderdale" alt="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
           <h3><a href="interior-design-fort-lauderdale.html">Interior Design in Fort Lauderdale</a></h3>
           <p>A Decade of Excellence In the vibrant realm of interior design, where creativity intertwines with functionality, Fort Lauderdale stands as a beacon of innovation.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
+          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Interior Design Fort Lauderdale" alt="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
           <h3><a href="interior-design-fort-lauderdale.html">Interior Design in Fort Lauderdale</a></h3>
           <p>A Decade of Excellence In the vibrant realm of interior design, where creativity intertwines with functionality, Fort Lauderdale stands as a beacon of innovation.</p>
         </div>
