--- a/architectural-firm-fort-lauderdale.html
+++ b/architectural-firm-fort-lauderdale.html
@@ -68,11 +68,9 @@
 
          <p>We are harnessing innovation with cutting-edge virtual reality technology. In an era of rapid technological advancement, we stay at the forefront of innovation by leveraging cutting-edge virtual reality technology. Through immersive 3D renderings and virtual walkthroughs, we provide our clients with a true-to-life preview of their future space, empowering them to make informed decisions and visualize the end result with unparalleled clarity.</p>
 
-         <h2>Quality without Compromise: Luxurious Designs and High-Quality Materials</h2>
-
          <p>Quality is the cornerstone of our philosophy. We source only the finest materials from trusted suppliers around the globe, ensuring that every element of our designs meets the highest standards of craftsmanship and durability. From exquisite finishes to bespoke furnishings, our designs exude luxury and sophistication, elevating the ordinary to the extraordinary.</p>
 
-         <h2>Streamlined Process: Handling Permits and Inspections with Ease</h2>
+         <h2>Our Streamlined Process</h2>
 
          <p>Navigating the complexities of permits and inspections can be daunting for many clients. That's why we take care of the entire process, from start to finish, ensuring compliance with local regulations and building codes. Our experienced team works closely with city officials and regulatory agencies to expedite the permitting process, keeping our projects on track and on schedule.</p>
 
