--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Interior Design Fort Lauderdale" alt="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
-          <h3><a href="interior-design-fort-lauderdale.html">Interior Design in Fort Lauderdale</a></h3>
-          <p>A Decade of Excellence In the vibrant realm of interior design, where creativity intertwines with functionality, Fort Lauderdale stands as a beacon of innovation.</p>
+          <a href="construction-company-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Interior Design Fort Lauderdale" alt="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
+          <h3><a href="construction-company-fort-lauderdale.html">Redefining Excellence: Construction Company in Fort Lauderdale Leading the Way</a></h3>
+          <p>Our renowned construction company stands out among the rest, offering unparalleled expertise, innovation, and dedication to client satisfaction.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
