--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Interior Design Fort Lauderdale" alt="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
-          <h3><a href="interior-design-fort-lauderdale.html">Interior Design in Fort Lauderdale</a></h3>
-          <p>A Decade of Excellence In the vibrant realm of interior design, where creativity intertwines with functionality, Fort Lauderdale stands as a beacon of innovation.</p>
+          <a href="project-management-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Interior Design Fort Lauderdale" alt="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale_thumbnail.jpg"></a>
+          <h3><a href="project-management-fort-lauderdale.html">Project Management in Fort Lauderdale</a></h3>
+          <p>At our esteemed firm, we pride ourselves on our mastery of project management, delivering exceptional results that exceed client expectations time and time again.</p>
         </div>
 
       </div>
