--- a/construction-company-fort-lauderdale.html
+++ b/construction-company-fort-lauderdale.html
@@ -50,7 +50,7 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h1 class="page-header">H1: Redefining Excellence: Construction Company in Fort Lauderdale Leading the Way</h1>
+          <h1 class="page-header">Redefining Excellence: Construction Company in Fort Lauderdale Leading the Way</h1>
           
           <p>In the bustling city of Fort Lauderdale, finding a construction company that not only meets but exceeds expectations is essential for bringing your vision to life. Our renowned construction company stands out among the rest, offering unparalleled expertise, innovation, and dedication to client satisfaction.</p>
 
